[tool.poetry]
name = "aviat"
version = "0.2.2"
description = ""
authors = ["RedMooner"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.extras]
beautifulsoup4 = ["beautifulsoup4"]
argparse = ["argparse"]
tqdm = ["tqdm"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aviat = 'aviat:main'